--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="row">
         <div class="col-12">
             <div class="input-group mb-3">
-                <input type="text" class="form-control p-2" placeholder="Type your Country" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input id="input-country" type="text" class="form-control p-2" placeholder="Type your Country" aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
-                  <button onclick="" class="btn btn-primary p-2" type="button">Search</button>
+                  <button onclick="countryData()" class="btn btn-primary p-2" type="button">Search</button>
                 </div>
               </div>
               <div class="card m-auto mt-5" style="width: 18rem;">
@@ -46,10 +46,10 @@
                     <div id="global-statistics"></div>
                 </div>
               </div>
-              <div id="country-statistics" class="card m-auto mt-5" style="width: 18rem;">
+              <div id="country-statistics-div" class="card m-auto mt-5" style="width: 18rem;">
                 <div class="card-body text-center">
                     <h3>Country Statistics:</h3>
-                    <p></p>
+                    <div id="country-statistics"></div>
                 </div>
               </div>
         </div>
