--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- ======= Main css ========== -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Covid 19 Data</title>
+    <title>Covid 19 Data By Jahid Walid</title>
 </head>
 <body>
 <!-- ============= Top Content ==========  -->
@@ -23,7 +23,7 @@
                 <h1>COVID 19 STATISTICS</h1>
                 <h4>By <a href="https://jahidwalid.com">Jahid Walid</a></h4>
                 <div class="line"></div>
-                <h2 id="date">Date: </h2>
+                <h2>Date: <span id="date"></span> </h2>
             </div>
         </div>
     </div>
